--- a/index.html
+++ b/index.html
@@ -56,14 +56,15 @@ application
  
 <!-- include the next line to use phonegap javascript functions -->
    <!-- <script type="text/javascript" charset="utf-8" src="phonegap.js"></script>-->
- <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
+    <script src="js/cordova.js"></script>
+
 <!-- include the next line to use jquery functions in your application
 you must download this and include the directory your html file is in
 -->
         <!--<script type="text/javascript" charset="utf-8" src="jquery.min.js"></script>-->
     
- <script type="text/javascript" charset="utf-8" src="jquery-1.8.2.js"></script>
-     
+    <script src="js/jquery-1.8.2.min.js"></script>
+  
      <!-- main scripts used in this example -->
  <script type="text/javascript" charset="utf-8">
  
@@ -106,8 +107,7 @@ alert("DEBUGGING: we are in the onBodyLoad() function");
 // if it does not exist, it will create it and return a database object stored in variable db
  db = openDatabase(shortName, version, displayName,maxSize);
  
-// this line will try to create the table User in the database just
-created/openned
+// this line will try to create the table User in the database just created/openned
  db.transaction(function(tx){
  
   // you can uncomment this next line if you want the User table to be empty each time the application runs
@@ -141,8 +141,7 @@ function ListDBValues() {
       if (result != null && result.rows != null) {
         for (var i = 0; i < result.rows.length; i++) {
           var row = result.rows.item(i);
-          $('#lbUsers').append('<br>' + row.UserId + '. ' +
-row.FirstName+ ' ' + row.LastName);
+          $('#lbUsers').append('<br>' + row.UserId + '. ' + row.FirstName+ ' ' + row.LastName);
         }
       }
      },errorHandler);
@@ -160,11 +159,9 @@ function AddValueToDB() {
    return;
  }
  
-// this is the section that actually inserts the values into the User
-table
+// this is the section that actually inserts the values into the User table
  db.transaction(function(transaction) {
-   transaction.executeSql('INSERT INTO User(FirstName, LastName) VALUES (?,?)',[$('#txFirstName').val(), $('#txLastName').val()],
-     nullHandler,errorHandler);
+   transaction.executeSql('INSERT INTO User(FirstName, LastName) VALUES (?,?)',[$('#txFirstName').val(), $('#txLastName').val()], nullHandler,errorHandler);
    });
  
 // this calls the function that will show what is in the User table in the database
