--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@ application
  
 <!-- include the next line to use phonegap javascript functions -->
    <!-- <script type="text/javascript" charset="utf-8" src="phonegap.js"></script>-->
-    <script src="js/cordova.js"></script>
+    <script src="cordova.js"></script>
 
 <!-- include the next line to use jquery functions in your application
 you must download this and include the directory your html file is in
 -->
         <!--<script type="text/javascript" charset="utf-8" src="jquery.min.js"></script>-->
     
-    <script src="js/jquery-1.8.2.min.js"></script>
+    <script src="jquery-1.8.2.min.js"></script>
   
      <!-- main scripts used in this example -->
  <script type="text/javascript" charset="utf-8">
